--- a/bib.bib
+++ b/bib.bib
@@ -1605,3 +1605,112 @@
   publisher = {Elsevier {BV}},
   annotation = {r, r-packages},
 }
+
+@Article{Epskamp-Lourens-Mottus-etal-2018,
+  author = {Sacha Epskamp and Lourens J. Waldorp and Ren{\a'e} M~ottus and Denny Borsboom},
+  date = {2018-04},
+  journaltitle = {Multivariate Behavioral Research},
+  title = {The {Gaussian} graphical model in cross-sectional and time-series data},
+  doi = {10.1080/00273171.2018.1454823},
+  number = {4},
+  pages = {453--480},
+  volume = {53},
+  abstract = {We discuss the Gaussian graphical model (GGM; an undirected network of partial correlation coefficients) and detail its utility as an exploratory data analysis tool. The GGM shows which variables predict one-another, allows for sparse modeling of covariance structures, and may highlight potential causal relationships between observed variables. We describe the utility in three kinds of psychological data sets: data sets in which consecutive cases are assumed independent (e.g., cross-sectional data), temporally ordered data sets (e.g., n = 1 time series), and a mixture of the 2 (e.g., n > 1 time series). In time-series analysis, the GGM can be used to model the residual structure of a vector-autoregression analysis (VAR), also termed graphical VAR. Two network models can then be obtained: a temporal network and a contemporaneous network. When analyzing data from multiple subjects, a GGM can also be formed on the covariance structure of stationary means—the between-subjects network. We discuss the interpretation of these models and propose estimation methods to obtain these networks, which we implement in the R packages graphicalVAR and mlVAR. The methods are showcased in two empirical examples, and simulation studies on these methods are included in the supplementary materials.},
+  publisher = {Informa {UK} Limited},
+  keywords = {time-series analysis, multilevel modeling, multivariate analysis, exploratory-data analysis, network modeling},
+}
+
+@Article{Li-Wood-Ji-etal-2021,
+  author = {Yanling Li and Julie Wood and Linying Ji and Sy-Miin Chow and Zita Oravecz},
+  date = {2021-09},
+  journaltitle = {Structural Equation Modeling: A Multidisciplinary Journal},
+  title = {Fitting multilevel vector autoregressive models in {Stan}, {JAGS}, and {Mplus}},
+  doi = {10.1080/10705511.2021.1911657},
+  number = {3},
+  pages = {452--475},
+  volume = {29},
+  abstract = {The influx of intensive longitudinal data creates a pressing need for complex modeling tools that help enrich our understanding of how individuals change over time. Multilevel vector autoregressive (mlVAR) models allow for simultaneous evaluations of reciprocal linkages between dynamic processes and individual differences, and have gained increased recognition in recent years. High-dimensional and other complex variations of mlVAR models, though often computationally intractable in the frequentist framework, can be readily handled using Markov chain Monte Carlo techniques in a Bayesian framework. However, researchers in social science fields may be unfamiliar with ways to capitalize on recent developments in Bayesian software programs. In this paper, we provide step-by-step illustrations and comparisons of options to fit Bayesian mlVAR models using Stan, JAGS and Mplus, supplemented with a Monte Carlo simulation study. An empirical example is used to demonstrate the utility of mlVAR models in studying intra- and inter-individual variations in affective dynamics.},
+  publisher = {Informa {UK} Limited},
+  keywords = {multilevel vector autoregressive models, Bayesian modeling, missing data, affective dynamics},
+}
+
+@Article{Efron-1979a,
+  author = {Bradley Efron},
+  date = {1979-01},
+  journaltitle = {The Annals of Statistics},
+  title = {Bootstrap methods: Another look at the jackknife},
+  doi = {10.1214/aos/1176344552},
+  number = {1},
+  volume = {7},
+  abstract = {We discuss the following problem: given a random sample $\mathbf{X} = \left( X_1 , X_2 , \dots , X_n \right)$ from an unknown probability distribution $F$, estimate the sampling distribution of some prespecified random variable $R \left( \mathbf{X}, F \right)$, on the basis of the observed data $\mathbf{x}$. (Standard jackknife theory gives an approximate mean and variance in the case $R \left( \mathbf{X}, F \right) = \theta \left( \hat{F} \right) - \theta \left( F \right)$, $\theta$ some parameter of interest.) A general method, called the ``bootstrap'' is introduced, and shown to work satisfactorily on a variety of estimation problems. The jackknife is shown to be a linear approximation method for the bootstrap. The exposition proceeds by a series of examples: variance of the sample median, error rates in a linear discriminant analysis, ratio estimation, estimating regression parameters, etc.},
+  publisher = {Institute of Mathematical Statistics},
+  keywords = {bootstrap, discriminant analysis, error rate estimation, jackknife, nonlinear regression, nonparametric variance estimation, resampling, subsample values},
+}
+
+@Article{Efron-1979b,
+  author = {Bradley Efron},
+  date = {1979-10},
+  journaltitle = {{SIAM} Review},
+  title = {Computers and the theory of statistics: Thinking the unthinkable},
+  doi = {10.1137/1021092},
+  number = {4},
+  pages = {460--480},
+  volume = {21},
+  abstract = {This is a survey article concerning recent advances in certain areas of statistical theory, written for a mathematical audience with no background in statistics. The topics are chosen to illustrate a special point: how the advent of the high-speed computer has affected the development of statistical theory. The topics discussed include nonparametric methods, the jackknife, the bootstrap, cross-validation, error-rate estimation in discriminant analysis, robust estimation, the influence function, censored data, the EM algorithm, and Cox's likelihood function. The exposition is mainly by example, with only a little offered in the way of theoretical development.},
+  publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
+}
+
+@Article{Asparouhov-Hamaker-Muthen-2017,
+  author = {Tihomir Asparouhov and Ellen L. Hamaker and Bengt Muth{\a'e}n},
+  date = {2017-12},
+  journaltitle = {Structural Equation Modeling: A Multidisciplinary Journal},
+  title = {Dynamic structural equation models},
+  doi = {10.1080/10705511.2017.1406803},
+  number = {3},
+  pages = {359--388},
+  volume = {25},
+  abstract = {This article presents dynamic structural equation modeling (DSEM), which can be used to study the evolution of observed and latent variables as well as the structural equation models over time. DSEM is suitable for analyzing intensive longitudinal data where observations from multiple individuals are collected at many points in time. The modeling framework encompasses previously published DSEM models and is a comprehensive attempt to combine time-series modeling with structural equation modeling. DSEM is estimated with Bayesian methods using the Markov chain Monte Carlo Gibbs sampler and the Metropolis-Hastings sampler. We provide a detailed description of the estimation algorithm as implemented in the Mplus software package. DSEM can be used for longitudinal analysis of any duration and with any number of observations across time. Simulation studies are used to illustrate the framework and study the performance of the estimation method. Methods for evaluating model fit are also discussed.},
+  publisher = {Informa {UK} Limited},
+  keywords = {Bayesian methods, dynamic factor analysis, intensive longitudinal data, time series analysis},
+}
+
+@Article{Chen-Daniel-Ziad-etal-2011,
+  author = {Gang Chen and Daniel R. Glen and Ziad S. Saad and J. Paul Hamilton and Moriah E. Thomason and Ian H. Gotlib and Robert W. Cox},
+  date = {2011-12},
+  journaltitle = {Computers in Biology and Medicine},
+  title = {Vector autoregression, structural equation modeling, and their synthesis in neuroimaging data analysis},
+  doi = {10.1016/j.compbiomed.2011.09.004},
+  number = {12},
+  pages = {1142--1155},
+  volume = {41},
+  abstract = {Vector autoregression (VAR) and structural equation modeling (SEM) are two popular brain-network modeling tools. VAR, which is a data-driven approach, assumes that connected regions exert time-lagged influences on one another. In contrast, the hypothesis-driven SEM is used to validate an existing connectivity model where connected regions have contemporaneous interactions among them. We present the two models in detail and discuss their applicability to FMRI data, and their interpretational limits. We also propose a unified approach that models both lagged and contemporaneous effects. The unifying model, structural vector autoregression (SVAR), may improve statistical and explanatory power, and avoid some prevalent pitfalls that can occur when VAR and SEM are utilized separately.},
+  keywords = {connectivity analysis, vector autoregression (VAR), structural equation modeling (SEM), structural vector autoregression (SVAR)},
+  publisher = {Elsevier {BV}},
+}
+
+@Article{Curran-Bauer-2011,
+  author = {Patrick J. Curran and Daniel J. Bauer},
+  date = {2011-01},
+  journaltitle = {Annual Review of Psychology},
+  title = {The Disaggregation of within-person and between-person effects in longitudinal models of change},
+  doi = {10.1146/annurev.psych.093008.100356},
+  number = {1},
+  pages = {583--619},
+  volume = {62},
+  abstract = {Longitudinal models are becoming increasingly prevalent in the behavioral sciences, with key advantages including increased power, more comprehensive measurement, and establishment of temporal precedence. One particularly salient strength offered by longitudinal data is the ability to disaggregate between-person and within-person effects in the regression of an outcome on a time-varying covariate. However, the ability to disaggregate these effects has not been fully capitalized upon in many social science research applications. Two likely reasons for this omission are the general lack of discussion of disaggregating effects in the substantive literature and the need to overcome several remaining analytic challenges that limit existing quantitative methods used to isolate these effects in practice. This review explores both substantive and quantitative issues related to the disaggregation of effects over time, with a particular emphasis placed on the multilevel model. Existing analytic methods are reviewed, a general approach to the problem is proposed, and both the existing and proposed methods are demonstrated using several artificial data sets. Potential limitations and directions for future research are discussed, and recommendations for the disaggregation of effects in practice are offered.},
+  publisher = {Annual Reviews},
+  keywords = {multilevel modeling, growth modeling, trajectory analysis, within-person effects},
+}
+
+@Article{Gates-Molenaar-Hillary-etal-2010,
+  author = {Kathleen M. Gates and Peter C.M. Molenaar and Frank G. Hillary and Nilam Ram and Michael J. Rovine},
+  date = {2010-04},
+  journaltitle = {{NeuroImage}},
+  title = {Automatic search for {fMRI} connectivity mapping: An alternative to {Granger} causality testing using formal equivalences among {SEM} path modeling, {VAR}, and unified {SEM}},
+  doi = {10.1016/j.neuroimage.2009.12.117},
+  number = {3},
+  pages = {1118--1125},
+  volume = {50},
+  abstract = {Modeling the relationships among brain regions of interest (ROIs) carries unique potential to explicate how the brain orchestrates information processing. However, hurdles arise when using functional MRI data. Variation in ROI activity contains sequential dependencies and shared influences on synchronized activation. Consequently, both lagged and contemporaneous relationships must be considered for unbiased statistical parameter estimation. Identifying these relationships using a data-driven approach could guide theory-building regarding integrated processing. The present paper demonstrates how the unified SEM attends to both lagged and contemporaneous influences on ROI activity. Additionally, this paper offers an approach akin to Granger causality testing, Lagrange multiplier testing, for statistically identifying directional influence among ROIs and employs this approach using an automatic search procedure to arrive at the optimal model. Rationale for this equivalence is offered by explicating the formal relationships among path modeling, vector autoregression, and unified SEM. When applied to simulated data, biases in estimates which do not consider both lagged and contemporaneous paths become apparent. Finally, the use of unified SEM with the automatic search procedure is applied to an empirical data example.},
+  publisher = {Elsevier {BV}},
+}
